[package]
name = "rust-genetic-algorithm"
version = "0.1.0"
authors = ["Ben Hansen <bhbenjaminhansen@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
rand = "0.7"
wasm-bindgen = "0.2.69"
console_error_panic_hook = "0.1.6"
js-sys = "0.3.46"

[dependencies.web-sys]
version = "0.3.46"
features = ["console"]