[package]
name = "rust-genetic-algorithm"
version = "0.1.0"
authors = ["Ben Hansen <bhbenjaminhansen@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["rlib", "cdylib"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.8"
futures = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.69"
wasm-bindgen-futures = "0.4.19"
console_error_panic_hook = "0.1.6"
js-sys = "0.3.46"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.46"
features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "Window",
    "Node",
    "NodeList",
]